<resources>
    <string name="app_name">My Wallet</string>
    <string name="title_home">Home</string>
    <string name="title_save_goal">Goals</string>
    <string name="budget">My Budget</string>
    <string name="budget2">Add Budget Item</string>
    <string name="budget3">Update Budget Item</string>
    <string name="budget5">Food and Beverages </string>
    <string name="budget7">Category </string>
    <string name="budget8">Budget Amount </string>
    <string name="budget9">ADD </string>
    <string name="budget10">Remaining </string>
    <string name="budget6">Clothes </string>

    <string name="goal1"> Add Goal</string>
    <string name="goal2"> Goal</string>
    <string name="goal3"> Target Amount</string>
    <string name="goal4"> Date</string>
    <string name="goal5"> Add Goal</string>
    <string name="goal6"> Cansel</string>
    <string name="goal7"> Add Goal</string>
    <string name="goal8"> Goal</string>
    <string name="goal9"> Target Amount</string>
    <string name="goal10"> Date</string>
    <string name="goal11"> Update</string>
    <string name="goal12"> Cansel</string>
    <string name="goal13"> Add Money</string>
    <string name="goal14"> Amount</string>
    <string name="goal15"> Add</string>
    <string name="goal16"> Cansel</string>
    <string name="goal17"> Save for Goal</string>
    <string name="goal18"> Trip To Nuwara-eliya</string>
    <string name="goal19"> 25000.00</string>
    <string name="goal20"> 20/08/2020</string>
    <string name="goal21"> Current Amount</string>

    <string name="dailyExpenses">Daily Expenses</string>
    <string name="dateHere">Date Here</string>
    <string name="amount">Amount</string>
    <string name="defaultAmount">0.00</string>
    <string name="defaultExpenseName">Bill and Utility Payments</string>
    <string name="wallet">Wallet</string>
    <string name="note">Note</string>
    <string name="noteHere">Note Here</string>
    <string name="btnDelete">Delete</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="bottomNavExpenses">Expenses</string>
    <string name="bottomNavIncome">Income</string>
    <string name="bottomNavGoal">Goals</string>
    <string name="bottomNavBudget">Budget</string>
    <string name="addExpensesTitle">Add Expenses</string>
    <string name="date">Date</string>
    <string name="addExpense">Add Expense</string>
    <string name="cansel">Cansel</string>
    <string name="updateExpense">Update Expense</string>
    <string name="update">Update</string>
    <string name="transactionTitle">Transactions</string>
    <string name="morning">Good Morning</string>
    <string name="august">August</string>
    <string name="inflow">Inflow</string>
    <string name="outflow">Outflow</string>

    <string name="mywallets">My Wallets</string>
    <string name="balance">Balance</string>
    <string name="boccreditcard">Boc Credit Card</string>
    <string name="addresource"> Add Resource</string>
    <string name="walletname">Wallet Name</string>
    <string name="addmoney">Add Money</string>
    <string name="addwallet">Add Wallet</string>
    <string name="updateresource">Update Resource</string>
    <string name="addincome">Add Income</string>
    <string name="category">Category</string>
    <string name="updateincome">Update Income</string>
    <string name="price">60000.00</string>
    <string name="add">Add</string>
    <string name="text">Lorem  ispham dika kliokalsd </string>
    <string name="masters">Masters</string>
    <string name="mad">MAD</string>
    <string name="next">Next</string>
    <string name="title_activity_user_settings">UserSettings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="invalidresource">Please Input the Wallet</string>
    <string name="invalidincome">Please Enter the Amount</string>


</resources>