<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Goal.Goal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:background="@drawable/background_blue_fill"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/goal1"
        android:textColor="#ffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="212dp"
        android:src="@drawable/mission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="295dp"
        android:layout_height="38dp"
        android:background="@drawable/background_blue_no_fills"
        android:text="@string/goal2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="295dp"
        android:layout_height="36dp"
        android:text="@string/goal3"
        android:textSize="24sp"
        android:background="@drawable/background_blue_no_fills"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="293dp"
        android:layout_height="36dp"
        android:text="@string/goal4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/background_blue_no_fills"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="49dp"
        android:background="@drawable/background_blue_fully_rounded"
        android:textColor="#ffff"
        android:text="@string/goal5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="134dp"
        android:layout_height="53dp"
        android:background="@drawable/background_pink_fully_rounded"
        android:textColor="#ffff"
        android:text="@string/goal6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

</androidx.constraintlayout.widget.ConstraintLayout>