<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Goal.Goal1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="206dp"
            android:layout_height="203dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/mission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="179dp"
            android:layout_height="47dp"
            android:background="@drawable/background_blue_fill"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/goal7"
            android:textColor="#ffff"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <EditText
            android:id="@+id/textView6"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_blue_no_fills"
            android:text="@string/goal8"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/textView7"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_blue_no_fills"
            android:text="@string/goal9"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.598"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/textView8"
            android:layout_width="302dp"
            android:layout_height="43dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_blue_no_fills"
            android:text="@string/goal10"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.614"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:background="@drawable/background_blue_fully_rounded"
            android:text="@string/goal11"
            android:textColor="#ffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.347"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.802" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="142dp"
            android:layout_height="47dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_pink_fully_rounded"
            android:text="@string/goal12"
            android:textColor="#ffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.801" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>