<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Expenses.AddExpense">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
        android:id="@+id/addExpensesMainImage"
        android:layout_width="205dp"
        android:layout_height="154dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/add_expenses_main_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_blue_fill"
        android:text="@string/addExpensesTitle"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/titleFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/editText"
        android:layout_width="@dimen/dataBoxWidth"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/background_blue_no_fills"
        android:inputType="numberDecimal"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/amountTitle"
        app:layout_constraintTop_toBottomOf="@+id/addExpensesMainImage"></EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="@dimen/dataBoxWidth"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_blue_no_fills"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toEndOf="@+id/dateTitle"
        app:layout_constraintTop_toBottomOf="@+id/editText"></EditText>

    <EditText
        android:layout_width="@dimen/dataBoxWidth"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_blue_no_fills"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toEndOf="@+id/categoryTitle"
        app:layout_constraintTop_toBottomOf="@+id/editText2"></EditText>

    <TextView
        android:id="@+id/amountTitle2"
        android:layout_width="@dimen/dataBoxWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_blue_fill"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/amount"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExpensesMainImage"></TextView>


    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="@dimen/dataBoxWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_blue_fill"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/date"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountTitle2"
        app:layout_constraintVertical_bias="0.0"></TextView>

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="@dimen/dataBoxWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_blue_fill"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/category"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTitle"></TextView>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/note"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryTitle"></TextView>


    <EditText
        android:id="@+id/note"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_blue_no_fills"
        android:textSize="@dimen/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32"></EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_blue_fully_rounded"
        android:outlineProvider="none"
        android:text="@string/addExpense"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/background_pink_fully_rounded"
        android:outlineProvider="none"
        android:text="@string/cansel"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton2"
        app:layout_constraintTop_toBottomOf="@+id/note"></androidx.appcompat.widget.AppCompatButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
