<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Expenses.DailyExpensesInDetail">

    <!--ScrollView is used. Because there may be more items in the lists in this layout
    Scrollbars are hide-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_blue_fill"
                    android:text="@string/dailyExpenses"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/titleFontSize"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/dateHere"></TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/dataBoxWidth"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/background_pink_fill"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/amount"
                        android:textColor="@color/colorWhite"></TextView>

                    <TextView
                        android:layout_width="@dimen/dataBoxWidth"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_pink_no_fills"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/defaultAmount"
                        android:textColor="@color/colorPink"></TextView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/expense_page_clipart"></ImageView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_daily_expenses_in_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>