<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Income.Income2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="161dp"
            android:layout_height="43dp"
            android:background="@drawable/background_blue_fill"
            android:gravity="center_vertical|center_horizontal"

            android:text="@string/walletname"
            android:textColor="#ffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="223dp"
            android:layout_height="107dp"
            android:src="@drawable/wallet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.026" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="102dp"
            android:layout_height="31dp"
            android:layout_marginTop="92dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/background_pink_fill"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/balance"
            android:textColor="#ffff"
            app:layout_constraintBottom_toTopOf="@+id/list_income"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="111dp"
            android:layout_height="28dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_pink_no_fills"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/price"
            android:textColor="#E32552"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <Button
            android:id="@+id/addmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="134dp"
            android:text="@string/addmoney"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_income"
            app:layout_constraintVertical_bias="0.009" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_income"
            android:layout_width="386dp"
            android:layout_height="242dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>