<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Income.Income">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/categoryId"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_blue_fill"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/mywallets"
                android:textColor="#ffff"
                android:textSize="@dimen/titleFontSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.042" />

            <TextView
                android:id="@+id/budamount"
                android:layout_width="115dp"
                android:layout_height="34dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_pink_fill"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/balance"
                android:textColor="#ffff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryId" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="115dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_pink_no_fills"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/price"
                android:textColor="#E32552"
                app:layout_constraintStart_toEndOf="@+id/budamount"
                app:layout_constraintTop_toBottomOf="@+id/categoryId" />

            <Button
                android:id="@+id/addresorce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/addresource"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.424"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_income" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="101dp"
                android:layout_height="89dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/revenue"
                app:layout_constraintStart_toEndOf="@+id/textView29"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:padding="5dp"

                app:layout_constraintBottom_toTopOf="@+id/addBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29"
                app:layout_constraintVertical_bias="0.16" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>